# blog

./: 404.html  CNAME  index.html  index.xml  klipse.html  site.webmanifest  sitemap.xml  style.min.8e72eaf30242279b90867e29e1caad29da8705d884235124f205cdaf7cf82fa4.css  style.min.c2b918d0b645b6732a537299abbcdb9450c4426034e60ae83fa3b194686e2200.css
aidio/: index.html
blog/: _metadata.yml  index.html  index.xml
categories/: index.html  index.xml
css/: bundle.css  p.css
js/: bundle.js  custom.js  custom.min.ce76cc231156f4a0a0a8dd045fb3a4712eae135f4a7178b6f24efd3223aa3faa.js  hljs-org.3b4e272d.js  hljs-org.c2934470.js  hljs-org.f06028f4.js
model-explorations/: clojure-preview.html  clojure.embed.ipynb  clojure.out.ipynb  clojure.qmd  explorations-preview.html  explorations.embed.ipynb  explorations.out.ipynb  index-preview.html  index.embed.ipynb  index.html  index.out.ipynb  index.qmd
nn/: index-preview.html  index.embed.ipynb  index.html  index.out.ipynb  index.qmd
notes/deep-learning-with-python/: index.html  project.clj  pyproject.toml
notes/deep-learning-with-python/src/org/msync/dl_python/: core.clj  python_init.clj
notes/deep-learning-with-python/test/org/msync/: dl_python_test.clj
notes/llm-from-scratch/: _chapter1.qmd  _chapter2.qmd  index.html  index.qmd  main.py  pyproject.toml  references.bib  styles.css
notes/llm-from-scratch/_freeze/index/execute-results/: md.json
notes/llm-from-scratch/stage1/: data_loader.py  embeddings.py  tokenization.py
notes/llm-from-scratch/utils/: __init__.py  data.py  downloaders.py  pretty.py  script_helpers.py
(+301 files in other folders)
