[tool.poetry]
name = "llm-with-python"
version = "0.1.0"
description = ""
authors = ["Ravindra Jaju <jaju@msync.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
transformers = "^4.39.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
