[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Notes and code accompanying the book Build A Large Language Model (From Scratch)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyter-cache>=1.0.1",
  "jupyter-client>=8.6.3",
  "jupyterlab>=4.4.7",
  "loguru>=0.7.3",
  "numpy>=2.3.3",
  "tabulate>=0.9.0",
  "tiktoken>=0.9.0",
  "torch>=2.7.0",
]

[dependency-groups]
dev = [
  "asitop>=0.0.24",
  "autopep8>=2.3.2",
  "black>=25.9.0",
  "clang-format>=21.1.1",
  "flake8>=7.2.0",
  "grip>=4.6.2",
  "isort>=6.0.1",
  "nbformat>=5.10.4",
  "neovim>=0.3.1",
  "pillow>=11.1.0",
  "pip>=25.0.1",
  "pre-commit>=4.1.0",
  "proselint>=0.14.0",
  "pynput>=1.8.1",
  "pynvim>=0.6.0",
  "pyperclip>=1.10.0",
  "python-lsp-ruff>=2.2.2",
  "python-lsp-server[websockets,yapf]>=1.12.2",
  "ruff>=0.13.1",
  "twine>=6.2.0",
  "yapf>=0.43.0",
]
